--- a/Web/.htaccess
+++ b/Web/.htaccess
@@ -5,12 +5,13 @@
 
     RewriteEngine On
 
-    # Redirige les pages admin/ sur le Backend
-    RewriteRule ^admin/ bootstrap.php?app=Backend [QSA,L]
-
     # Si le fichier auquel on tente d'accéder existe (si on veut accéder à une image par exemple).
     # Alors on ne réécrit pas l'URL.
     RewriteCond %{REQUEST_FILENAME} !-f
+    
+    # Exemple de redirection si plusieurs applications sont gérée sur le même site
+    # Par exemple, pour dissocier l'administration du site principal :
+    # RewriteRule ^admin/ bootstrap.php?app=Backend [QSA,L]
 
     # Redirige toutes les autres requetes sur le Frontend
     RewriteRule ^(.*)$ bootstrap.php?app=Frontend [QSA,L]
